--- a/index.html
+++ b/index.html
@@ -16,21 +16,50 @@
     <script src="libs/angular/angular-route.min.js"></script>
 
     <!-- Angular Material -->
-    <link rel="stylesheet" href="libs/angular-material/angular-material.min.css">
+    <link href="libs/angular-material/angular-material.min.css" rel="stylesheet">
     <script src="libs/angular-material/angular-material.min.js"></script>
+    <style>
+        @font-face {
+            font-family: 'Material Icons';
+            font-style: normal;
+            font-weight: 400;
+            src: url(fonts/MaterialIcons-Regular.eot); /* For IE6-8 */
+            src: local('fonts/Material Icons'),
+                local('fonts/MaterialIcons-Regular'),
+                url(fonts/MaterialIcons-Regular.woff2) format('woff2'),
+                url(fonts/MaterialIcons-Regular.woff) format('woff'),
+                url(fonts/MaterialIcons-Regular.ttf) format('truetype');
+        }
 
-    <!-- Services -->
-    <!-- TODO: Add services here -->
+        .material-icons {
+            -moz-osx-font-smoothing: grayscale;  /* Support for IE. */
+            -webkit-font-smoothing: antialiased;  /* Support for Safari and Chrome. */
+            direction: ltr;  /* Support for all WebKit browsers. */
+            display: inline-block;
+            font-family: 'Material Icons';
+            font-feature-settings: 'liga';
+            font-size: 24px;  /* Preferred icon size */
+            font-style: normal;
+            font-weight: normal;
+            letter-spacing: normal;
+            line-height: 1;
+            text-rendering: optimizeLegibility;  /* Support for Firefox. */
+            text-transform: none;
+            white-space: nowrap;
+            word-wrap: normal;
+        }
+    </style>
 
     <!-- Directives -->
     <!-- TODO: Add directives here -->
 
-    <!-- Components -->
-    <link rel="stylesheet" href="app/components/chatbox/css/chatbox.css">
+    <!-- Components: Chatbox -->
+    <link href="app/components/chatbox/css/chatbox.css" rel="stylesheet">
     <script src="app/components/chatbox/module.js"></script>
     <script src="app/components/chatbox/chatbox.js"></script>
 
-    <link rel="stylesheet" href="app/components/dashboard/css/dashboard.css">
+    <!-- Components: Dashboard -->
+    <link href="app/components/dashboard/css/dashboard.css" rel="stylesheet">
     <script src="app/components/dashboard/module.js"></script>
     <script src="app/components/dashboard/dashboard.js"></script>
 
